@@ -14,6 +14,8 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 - bug #2967565 [insert] UNHEX not selected by default when inserting BINARY
 - [navi] Changed link to git repository on main page
 - bug #2972232 [menu] Import menu tab not present on main page
+- patch #2976790 [menu] Go to the upper level after table DROP,
+  thanks to Kaarel Nummert - kaarelnu
 
 3.3.1.0 (2010-03-16)
 - bug #2941037 [core] Database structure not sorted by table correctly 
